[package]
name = "score_calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.192", features = ["derive"] }
clap = { version = "4.4.7", features = ["derive"] }
atty = "0.2.14"
humantime = "2.1.0"
itertools = "0.9.0"
