[package]
name = "reconstruction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spingus = { git = "https://github.com/jamadaha/spingus.git", rev = "b23be85" }
clap = { version = "4.4.4", features = ["derive"] }
bitvec = "1.0.1"
itertools = "0.11.0"
rand = "0.8.5"
once_cell = "1.18.0"
memory-stats = "1.1.0"
pathsearch = "0.2.0"

[profile.relwithdebinfo]
inherits = "release"
debug = true
