[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsing = { path = "../parsing" }
state = { path = "../state" }
shared = { path = "../shared" }
clap = { version = "4.4.4", features = ["derive"] }
color-eyre = "0.6.2"
